2000-03-26  Miguel de Icaza  <miguel@gnu.org>

	* folder-browser-factory.c (folder_browser_set_shell): Memory leak
	fix. 

2000-03-25  Dan Winship  <danw@helixcode.com>

	* message-list.c (select_msg, ml_value_at): update for summary
	changes. Hey, neat, it really does make it more efficient.

2000-03-22  Christopher James Lahey  <clahey@helixcode.com>

	* .cvsignore: Updated .cvsignore.

2000-03-21  Matt Loper  <matt@helixcode.com>

	* mail-display.c: Minor cleanup & commenting.

	* folder-browser-factory.c: Minor cleanup & warning elimination.

2000-03-21  bertrand  <bertrand@helixcode.com>

	* message-list.c (ml_value_at): display message size

2000-03-20  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Properly ref & sink the table and header models.

2000-03-14  Dan Winship  <danw@helixcode.com>

	* mail-sources.c: First cut at a mail source selection wizard.
	Basically a rigged demo at this point. Doesn't use camel to get
	its information, and is not yet complete or integrated with the
	mail component. Did I mention that the code is ugly?

2000-03-13  bertrand  <bertrand@helixcode.com>

	* folder-browser-factory.c (folder_browser_set_shell): 
	for testing and demonstration purpose, immediately 
	register a fake service.

2000-03-12  bertrand  <bertrand@helixcode.com>

	* folder-browser-factory.c (folder_browser_factory_init): 
	name change.
	(control_activate_cb): when the control is activated, 
	it merges its own UI with the remote UIHandler.
	(control_add_menu): sample menu merging.
	(folder_browser_factory): connect the control "activate" signal.

	* evolution-mail.gnorba: 
	name changes

	* folder-browser.h: added a reference to an 
	Evolution::Shell object. 

	* folder-browser-factory.c (folder_browser_set_shell): 
	(folder_browser_control_add_service_repository_interface): 
	(folder_browser_factory): the folder-browser control now
	implements the Evolution/ServiceRepository interface.

2000-03-07  bertrand  <bertrand@helixcode.com>
