@@ -1,3 +1,6 @@
+2000-03-27  Chris Toshok <toshok@helixcode.com>
+	* mail-display.c: quiet warnings when building in ../po
+
 2000-03-26  Miguel de Icaza  <miguel@gnu.org>
 
 	* folder-browser-factory.c (folder_browser_set_shell): Memory leak
